[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/host_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/turn-back.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/join_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Kenney Blocks.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Multi_menu.gd" type="Script" id=5]
[ext_resource path="res://scenes/JoinDialog.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_color = Color( 0.0745098, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_color = Color( 0.0431373, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 4 )

[node name="Multi_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1

[node name="multimenu" type="Label" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 180.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "MULTIPLAYER MENU"
align = 1

[node name="menu" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 165.0
margin_right = 180.0
margin_bottom = 195.0
custom_constants/separation = 24
alignment = 1

[node name="return" type="Button" parent="VBoxContainer/menu"]
margin_left = 21.0
margin_right = 51.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="return_label" type="Label" parent="VBoxContainer/menu/return"]
margin_left = -7.0
margin_top = 25.0
margin_right = 39.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "RETURN"
align = 1

[node name="create" type="Button" parent="VBoxContainer/menu"]
margin_left = 75.0
margin_right = 105.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="create_label" type="Label" parent="VBoxContainer/menu/create"]
margin_left = -6.0
margin_top = 25.0
margin_right = 39.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "create"
align = 1

[node name="join" type="Button" parent="VBoxContainer/menu"]
margin_left = 129.0
margin_right = 159.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="join_label" type="Label" parent="VBoxContainer/menu/join"]
margin_left = -4.0
margin_top = 25.0
margin_right = 36.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "join"
align = 1

[node name="CreateDialog" type="AcceptDialog" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 180.0
margin_bottom = 234.0
popup_exclusive = true
window_title = "Waiting for players..."

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/CreateDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 172.0
margin_bottom = 22.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CreateDialog/ScrollContainer"]
margin_right = 61.0
margin_bottom = 18.0

[node name="loading_label" type="Label" parent="VBoxContainer/CreateDialog/ScrollContainer/VBoxContainer"]
margin_right = 61.0
margin_bottom = 14.0
text = "Loading..."

[node name="Player_list" type="VBoxContainer" parent="VBoxContainer/CreateDialog/ScrollContainer/VBoxContainer"]

[node name="JoinDialog" type="WindowDialog" parent="."]
visible = true
margin_top = 172.0
margin_right = 179.0
margin_bottom = 252.0
popup_exclusive = true
window_title = "Waiting for players..."
script = ExtResource( 6 )

[node name="ConnectVBoxContainer" type="VBoxContainer" parent="JoinDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="error_label" type="Label" parent="JoinDialog/ConnectVBoxContainer"]
margin_right = 179.0
margin_bottom = 14.0

[node name="SpinBox" type="SpinBox" parent="JoinDialog/ConnectVBoxContainer"]
margin_top = 24.0
margin_right = 179.0
margin_bottom = 48.0
align = 1

[node name="connect_button" type="Button" parent="JoinDialog/ConnectVBoxContainer"]
margin_top = 58.0
margin_right = 179.0
margin_bottom = 78.0
text = "Connect"

[node name="WaitScrollContainer" type="ScrollContainer" parent="JoinDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="JoinDialog/WaitScrollContainer"]
margin_bottom = 18.0

[node name="Label" type="Label" parent="JoinDialog/WaitScrollContainer/VBoxContainer"]
margin_bottom = 14.0

[node name="PlayerList" type="VBoxContainer" parent="JoinDialog/WaitScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_bottom = 18.0

[connection signal="pressed" from="VBoxContainer/menu/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/menu/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="VBoxContainer/menu/join" to="." method="_on_join_pressed"]
[connection signal="popup_hide" from="VBoxContainer/CreateDialog" to="." method="_on_popup_hide"]
[connection signal="pressed" from="JoinDialog/ConnectVBoxContainer/connect_button" to="JoinDialog" method="_on_connect_button_pressed"]
